--- a/NaviBar/app/src/main/res/layout/activity_main.xml
+++ b/NaviBar/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
         android:layout_width="match_parent"
+        android:elevation="10dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
