--- a/NaviBar/app/src/main/res/layout/fragment_explore.xml
+++ b/NaviBar/app/src/main/res/layout/fragment_explore.xml
@@ -21,7 +21,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Explore."
+            android:text="Explore"
             android:textColor="#fff"
             android:textSize="36sp" />
 
