--- a/NaviBar/app/src/main/res/layout/activity_ticket_page.xml
+++ b/NaviBar/app/src/main/res/layout/activity_ticket_page.xml
@@ -6,4 +6,13 @@
     android:layout_height="match_parent"
     tools:context="com.cs591.mooncake.profile.TicketPage">
 
+    <TextView
+        android:id="@+id/tickettxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="This is Ticket Page, TO BE CONTINUE..."
+        android:textSize="24sp"
+        android:textStyle="bold" />
+
 </LinearLayout>
