--- a/NaviBar/app/src/main/res/layout/fragment_map.xml
+++ b/NaviBar/app/src/main/res/layout/fragment_map.xml
@@ -2,12 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.cs591.mooncake.MapFragment">
+    tools:context="com.cs591.mooncake.map.MapFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/mapView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Map Page" />
+        />
 
 </FrameLayout>
