--- a/NaviBar/app/src/main/res/layout/activity_event.xml
+++ b/NaviBar/app/src/main/res/layout/activity_event.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".EventActivity">
+    tools:context=".explore.EventActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
