--- a/NaviBar/app/src/main/res/layout/horizontal.xml
+++ b/NaviBar/app/src/main/res/layout/horizontal.xml
@@ -8,6 +8,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:id="@+id/type"
         android:text="Artists"
         android:textColor="#fff"
         android:textSize="30sp"
@@ -19,7 +20,7 @@
         android:layout_height="match_parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnShowAll"
         android:layout_width="300dp"
         android:layout_height="30dp"
         android:layout_gravity="center_horizontal"
