--- a/NaviBar/app/src/main/res/layout/rv_like_items.xml
+++ b/NaviBar/app/src/main/res/layout/rv_like_items.xml
@@ -2,14 +2,14 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_margin="10dp"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="11dp">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
         android:orientation="vertical"
         android:background="@drawable/list_rounded_corner"
         >
@@ -30,22 +30,21 @@
 
             <TextView
                 android:id="@+id/item_name"
-                android:layout_width="250dp"
+                android:layout_width="280dp"
                 android:layout_height="wrap_content"
                 android:text="Jupiter and Okwess"
                 android:layout_marginLeft="2dp"
                 android:textSize="24sp"
                 android:fontFamily="@font/lato_bold"
-                android:textColor="@android:color/black"/>
+                android:textColor="#FFFFFF"/>
 
             <Button
                 android:id="@+id/likebtn"
-                android:layout_width="35dp"
-                android:layout_height="30dp"
+                android:layout_width="30dp"
+                android:layout_height="26dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="15dp"
-                android:onClick="unfilled"
-                android:background="@drawable/heart_on" />
+                android:background="@drawable/like" />
 
 
 
