--- a/NaviBar/app/src/main/res/drawable/list_rounded_corner.xml
+++ b/NaviBar/app/src/main/res/drawable/list_rounded_corner.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FFFFFF"/>
-    <stroke android:width="3dp" android:color="#ffffff" />
+    <solid android:color="#fa6f57"/>
+    <stroke android:width="3dp" android:color="#fa6f57" />
     <corners android:radius="10dp"/>
     <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
 </shape>
