--- a/NaviBar/app/src/main/res/layout/activity_website_page.xml
+++ b/NaviBar/app/src/main/res/layout/activity_website_page.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.cs591.mooncake.profile.SettingsPage">
+    tools:context="com.cs591.mooncake.profile.WebsitePage">
 
     <TextView
         android:id="@+id/settingstxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="This is Settings Page, TO BE CONTINUE..."
+        android:text="This is Website Page, TO BE CONTINUE..."
         android:textSize="24sp"
         android:textStyle="bold" />
 
