--- a/NaviBar/app/src/main/res/layout/fragment_schedule.xml
+++ b/NaviBar/app/src/main/res/layout/fragment_schedule.xml
@@ -1,63 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#f64e46">
-<!--<?xml version="1.0" encoding="utf-8"?>-->
-<!--<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
-    <!--xmlns:tools="http://schemas.android.com/tools"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:background="#F64E46"-->
-    <!--android:fitsSystemWindows="true"-->
-    <!--android:clipToPadding="false"-->
-    <!--tools:context="com.cs591.mooncake.MainActivity">-->
-
-    <!--<android.support.design.widget.AppBarLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:background="#F64E46"-->
-        <!--android:fitsSystemWindows="true"-->
-        <!--android:theme="@style/AppTheme">-->
-
-        <!--<android.support.design.widget.CollapsingToolbarLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="104dp"-->
-            <!--android:background="#E01111"-->
-            <!--android:elevation="10dp"-->
-            <!--android:fitsSystemWindows="true"-->
-            <!--app:contentScrim="?attr/colorAccent"-->
-            <!--app:expandedTitleTextAppearance="@android:color/transparent"-->
-            <!--app:layout_scrollFlags="scroll|exitUntilCollapsed"-->
-            <!--&gt;-->
-
-
-            <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="49dp"-->
-                <!--android:layout_marginLeft="46dp"-->
-                <!--android:layout_marginTop="45dp"-->
-                <!--android:fitsSystemWindows="true"-->
-                <!--android:scaleType="centerCrop"-->
-                <!--android:text="Schedule"-->
-                <!--android:fontFamily="@font/lato_bold"-->
-                <!--android:textColor="@android:color/white"-->
-                <!--android:textSize="36sp" />-->
-
-
-        <!--</android.support.design.widget.CollapsingToolbarLayout>-->
-
-    <!--</android.support.design.widget.AppBarLayout>-->
+    android:background="#ff9f8e">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:background="#e01111"
+        android:background="#fa6f57"
         android:elevation="16dp"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
@@ -65,56 +18,35 @@
 
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:text="Schedule"
             android:textColor="#fff"
             android:textSize="36sp" />
 
+        <Button
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginRight="10dp"
+            android:id="@+id/menubtn"
+            android:background="@drawable/hamburgermenu"/>
+
 
     </android.support.v7.widget.Toolbar>
 
-    <android.support.v4.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        >
-        <LinearLayout
+    <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp">
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:orientation="horizontal"
                 android:gravity="center_vertical"
+                android:paddingTop="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="250dp">
 
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content">
 
-                    <TextView
-                        android:text="17"
-                        android:paddingLeft="20dp"
-                        android:textSize="30dp"
-                        android:fontFamily="@font/lato_bold"
-                        android:textColor="#ffffff"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:textSize="20dp"
-                        android:fontFamily="@font/lato_bold"
-                        android:text="Tue"
-                        android:paddingLeft="20dp"
-                        android:textColor="#ffffff"/>
-
-                </LinearLayout>
                 <LinearLayout
                     android:orientation="vertical"
                     android:layout_width="match_parent"
@@ -122,15 +54,25 @@
 
                     <LinearLayout
                         android:orientation="horizontal"
+                        android:paddingLeft="20dp"
                         android:paddingRight="20dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
 
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Friday"
+                            android:textSize="20sp"
+                            android:fontFamily="@font/lato_bold"
+                            android:paddingRight="15dp"
+                            android:textColor="#FFFFFF"/>
+
                         <ImageView
-                            android:id="@+id/item_image"
                             android:layout_width="15dp"
                             android:layout_height="15dp"
                             android:scaleType="centerCrop"
+                            android:layout_gravity="center"
                             android:src="@drawable/circle_ffffff"
                             />
                         <ImageView
@@ -148,7 +90,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="5dp"
-                        android:paddingRight="10dp"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="20dp"
 
                         ></android.support.v7.widget.RecyclerView>
 
@@ -159,34 +102,10 @@
             </LinearLayout>
             <LinearLayout
                 android:orientation="horizontal"
-                android:gravity="center_vertical"
+                android:paddingTop="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent">
 
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content">
-
-                    <TextView
-                        android:text="18"
-                        android:paddingLeft="20dp"
-                        android:textSize="30dp"
-                        android:fontFamily="@font/lato_bold"
-                        android:textColor="#ffffff"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:textSize="20dp"
-                        android:fontFamily="@font/lato_bold"
-                        android:text="Wed"
-                        android:paddingLeft="20dp"
-                        android:textColor="#ffffff"/>
-
-                </LinearLayout>
                 <LinearLayout
                     android:orientation="vertical"
                     android:layout_width="match_parent"
@@ -194,14 +113,25 @@
 
                     <LinearLayout
                         android:orientation="horizontal"
+                        android:paddingLeft="20dp"
                         android:paddingRight="20dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Saturday"
+                            android:textSize="20sp"
+                            android:fontFamily="@font/lato_bold"
+                            android:paddingRight="15dp"
+                            android:textColor="#FFFFFF"/>
 
                         <ImageView
                             android:id="@+id/item_image"
                             android:layout_width="15dp"
                             android:layout_height="15dp"
+                            android:layout_gravity="center"
                             android:scaleType="centerCrop"
                             android:src="@drawable/circle_ffffff"
                             />
@@ -219,6 +149,9 @@
                         android:id="@+id/rv2"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_margin="5dp"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="20dp"
 
 
                         ></android.support.v7.widget.RecyclerView>
@@ -233,7 +166,4 @@
         </LinearLayout>
 
 
-    </android.support.v4.widget.NestedScrollView>
-
-<!--</android.support.design.widget.CoordinatorLayout>-->
 </LinearLayout>
