--- a/NaviBar/app/src/main/res/values/colors.xml
+++ b/NaviBar/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="lightRed">#EF9A9A</color>
-    <color name="red">#E01111</color>
+    <color name="red">#fa6f57</color>
     <color name="darkRed">#B71C1C</color>
     <color name="white">#FFEBEE</color>
     <color name="colorPrimaryText">#050505</color>
