--- a/NaviBar/app/src/main/res/layout/rv_schedule_items.xml
+++ b/NaviBar/app/src/main/res/layout/rv_schedule_items.xml
@@ -4,37 +4,82 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_margin="10dp"
-    app:cardBackgroundColor="#F66464"
+    app:cardBackgroundColor="#ffbbaf"
     android:layout_height="wrap_content"
+    android:id="@+id/schedule_event"
     android:background="@drawable/list_rounded_corner"
     >
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:orientation="horizontal">
+
+    <LinearLayout
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:orientation="vertical"
         >
 
         <TextView
                 android:id="@+id/item_name"
-                android:layout_width="250dp"
+                android:layout_width="230dp"
                 android:layout_height="wrap_content"
                 android:text="Event One"
                 android:layout_marginLeft="2dp"
                 android:textSize="16sp"
                 android:textColor="@android:color/white"/>
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp">
 
         <TextView
-            android:id="@+id/item_description"
+            android:id="@+id/item_from_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="2dp"
             android:fontFamily="@font/lato_italic"
-            android:text="Far Far Away, Behind the Word"
+            android:text="From"
             android:textColor="@android:color/white"
             android:textSize="12sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:fontFamily="@font/lato_italic"
+                android:id="@+id/item_at"
+                android:text="at"
+                android:textColor="@android:color/white"
+                android:textSize="12sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/item_location"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
+                android:fontFamily="@font/lato_italic"
+                android:text="To"
+                android:textColor="@android:color/white"
+                android:textSize="12sp"
+                />
+
+
+        </LinearLayout>
+
+    </LinearLayout>
+        <Button
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:id="@+id/schedulestatus"
+            android:background="@drawable/add"/>
 
     </LinearLayout>
 
