update button click

--- a/NaviBar/app/src/main/res/layout/fragment_schedule.xml
+++ b/NaviBar/app/src/main/res/layout/fragment_schedule.xml
@@ -25,11 +25,11 @@
             android:textSize="36sp" />
 
         <Button
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginRight="10dp"
             android:id="@+id/menubtn"
-            android:background="@drawable/hamburgermenu"/>
+            android:background="@drawable/myschedule"/>
 
 
     </android.support.v7.widget.Toolbar>
